--- a/config/facebooker.yml
+++ b/config/facebooker.yml
@@ -9,7 +9,8 @@
 # This should only be necessary until the final version of the new profile is released.
 
 development:
-  ## ADD THE TWO LINES HERE
+  api_key: 6362eef0546ac41343b8519352e760fc
+  secret_key: b4e827cd0a79006b33e7bd686cb06c24
   canvas_page_name:
   callback_url: http://localhost:3000/
   pretty_errors: true
