Got rspec and cucumber working again.

--- a/config/facebooker.yml
+++ b/config/facebooker.yml
@@ -23,8 +23,8 @@ development:
     server_alive_interval: 0
 
 test:
-  api_key: 
-  secret_key: 
+  api_key: 6362eef0546ac41343b8519352e760fc
+  secret_key: b4e827cd0a79006b33e7bd686cb06c24
   canvas_page_name: 
   callback_url:
   set_asset_host_to_callback_url: true
@@ -36,8 +36,21 @@ test:
     server_alive_interval: 0
 
 production:
-  api_key: 
-  secret_key: 
+  api_key: 6362eef0546ac41343b8519352e760fc
+  secret_key: b4e827cd0a79006b33e7bd686cb06c24
+  canvas_page_name: 
+  callback_url: 
+  set_asset_host_to_callback_url: true   
+  tunnel:
+    public_host_username: 
+    public_host: 
+    public_port: 4007
+    local_port: 3000
+    server_alive_interval: 0
+    
+cucumber:
+  api_key: 6362eef0546ac41343b8519352e760fc
+  secret_key: b4e827cd0a79006b33e7bd686cb06c24
   canvas_page_name: 
   callback_url: 
   set_asset_host_to_callback_url: true   
